layout validation fix

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="css/success-modal.css" />
     <link rel="stylesheet" href="css/burger-menu.css" />
 
-    <script type="module" src="js/script.js" defer></script>
-    <script type="module" src="js/validation.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/validation.js" defer></script>
   </head>
 
   <body>
@@ -481,7 +481,7 @@
       <div class="success-modal__container container">
         <div class="success-modal__container--wrapper">
           <div class="success-modal__container__picture--layout">
-            <div class="success-modal__container__picture" src="/assets/successModal.svg"></div>
+            <div class="success-modal__container__picture"></div>
           </div>
           <p class="success-modal__container__title">Thank you!</p>
           <p class="success-modal__container__text">
